--- a/client/src/index.template.html
+++ b/client/src/index.template.html
@@ -7,7 +7,7 @@
     <title><%- htmlWebpackPlugin.options.title %></title>
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 
 <body>
